--- a/one-music-gh-pages/style.css
+++ b/one-music-gh-pages/style.css
@@ -1673,6 +1673,11 @@ img {
   .single-web-icon:hover {
     box-shadow: 0 2px 50px 0 rgba(0, 0, 0, 0.15); }
 
+  .toggle-audio{
+      background-color: #a65469;
+      color: white;
+      padding: 5px;
+  }
 /* ====== The End ====== */
 
 /*# sourceMappingURL=style.css.map */
